# compare-pdf-text-extraction

./: .gitignore  NuGet.config  README.md  aspire.config.json  compare-pdf-text-extraction.sln
.aspire/: settings.json
src/CsharpApi/: CsharpApi.csproj  CsharpApi.http  Program.cs
src/CsharpApi/Properties/: launchSettings.json
src/CsharpApi/Services/: IPdfReaderService.cs  PdfPigPdfReaderService.cs
src/Web/: Program.cs  Web.csproj
src/Web/Components/: App.razor  _Imports.razor
src/Web/Components/Layout/: MainLayout.razor  NavMenu.razor
src/Web/Components/Pages/: Home.razor  PrivacyPolicy.razor
src/Web/Properties/: launchSettings.json
src/Web/Services/: HttpClientPdfReaderService.cs
src/Web/wwwroot/: app.css
src/Web/wwwroot/js/: form-spinner.js
src/compare-pdf-text-extraction.AppHost/: AppHost.cs  compare-pdf-text-extraction.AppHost.csproj
src/compare-pdf-text-extraction.AppHost/Properties/: launchSettings.json
src/python_api/: pyproject.toml  python_api.py
